feat: updates have smart filter links in the overview and the details page shows related events and comments in separate tabs
